feat(backend): show events attending first
